[package]
name = "rustsheet-svg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsheet = { path = "../rustsheet" }
rustsheet-utils = { path = "../rustsheet-utils" }
svg = "0.14.0"


[[example]]
name = "test"
